Last UX correction, sumOfAllFinances- correcterd: when is large sum of moeny, money are wrapped, corrected resposible design

--- a/src/styles/parts/_homePage.scss
+++ b/src/styles/parts/_homePage.scss
@@ -54,6 +54,11 @@
                     @include fluid-type(40px, 60px);
                 }
 
+                @media(max-width:800px) {
+                    margin: 70px 0 0 0;
+                    @include fluid-type(40px, 60px);
+                }
+
             }
 
             .homePage__control {
